ingress.yaml
#
# mac 的 M1 机器, 使用 driver=docker 驱动时, 不支持 ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tapdext.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tapdext
                port:
                  number: 28080
